Added config gateway and discovery service

--- a/walletServices/src/main/resources/application.yml
+++ b/walletServices/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8083
+  port: 8084
 spring:
   application:
-    name: login-service
+    name: wallet-service
   config:
     import: "optional:configserver:http://localhost:8088"
 
