--- a/registrationLogin/src/main/resources/application.yml
+++ b/registrationLogin/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/pecuniapay
     username: root
-    password: password
+    password: admin
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
